--- a/MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C48b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,12 +18,10 @@
                         <viewControllerLayoutGuide type="bottom" id="n38-gi-rB5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="zMn-AG-sqS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="528"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X47-rx-isc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -39,51 +36,23 @@
                         <viewControllerLayoutGuide type="bottom" id="cNR-60-pgx"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="JQi-Cx-s7x">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="paE-xj-tG6">
-                                <rect key="frame" x="164" y="168" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="Button:" destination="g4u-Mk-1eu" eventType="touchUpInside" id="3Eu-0p-VBV"/>
-                                    <action selector="Button:" destination="cnX-SG-q64" eventType="touchUpInside" id="fRx-Ml-GCx"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Extended" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21S-nx-LYf">
-                                <rect key="frame" x="55" y="65" width="164" height="74"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bull.JPEG" translatesAutoresizingMaskIntoConstraints="NO" id="jGe-KX-2JQ">
+                                <rect key="frame" x="0.0" y="20" width="414" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="74" id="Dms-eS-pA0"/>
-                                    <constraint firstAttribute="width" constant="150" id="d0t-Da-WIG"/>
+                                    <constraint firstAttribute="height" constant="200" id="CyP-fj-2wB"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYK-4l-Z36">
-                                <rect key="frame" x="16" y="36" width="400" height="13.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="400" id="57N-9E-PYR"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="21S-nx-LYf" firstAttribute="leading" secondItem="JQi-Cx-s7x" secondAttribute="leadingMargin" constant="50" id="aWp-IH-KlL"/>
-                            <constraint firstItem="pYK-4l-Z36" firstAttribute="top" secondItem="Cl6-9L-vBH" secondAttribute="bottom" constant="16" id="boG-VA-D7P"/>
-                            <constraint firstItem="pYK-4l-Z36" firstAttribute="leading" secondItem="JQi-Cx-s7x" secondAttribute="leadingMargin" id="cUU-2Z-N6f"/>
-                            <constraint firstItem="paE-xj-tG6" firstAttribute="leading" secondItem="JQi-Cx-s7x" secondAttribute="leadingMargin" constant="150" id="iQr-1b-FU9"/>
-                            <constraint firstItem="paE-xj-tG6" firstAttribute="top" secondItem="Cl6-9L-vBH" secondAttribute="bottom" constant="150" id="iuE-fY-hgC"/>
-                            <constraint firstItem="21S-nx-LYf" firstAttribute="top" secondItem="Cl6-9L-vBH" secondAttribute="bottom" constant="50" id="yfL-IL-KhM"/>
+                            <constraint firstItem="jGe-KX-2JQ" firstAttribute="leading" secondItem="JQi-Cx-s7x" secondAttribute="leading" id="Bmr-LC-3ri"/>
+                            <constraint firstItem="jGe-KX-2JQ" firstAttribute="top" secondItem="Cl6-9L-vBH" secondAttribute="bottom" id="Xc1-Fp-M8I"/>
+                            <constraint firstAttribute="trailing" secondItem="jGe-KX-2JQ" secondAttribute="trailing" id="ZoB-DO-kB4"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="CompactLabel" destination="21S-nx-LYf" id="lej-5l-0KC"/>
-                        <outlet property="UUIDLabel" destination="pYK-4l-Z36" id="hzT-4D-77a"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Waq-dx-isD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -98,42 +67,70 @@
                         <viewControllerLayoutGuide type="bottom" id="NC1-16-X5Z"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="p9w-VX-VaC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Extended" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ibe-zV-cIs">
-                                <rect key="frame" x="46" y="117" width="164" height="74"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YRD-PZ-nwh">
+                                <rect key="frame" x="0.0" y="90" width="414" height="50"/>
+                                <color key="backgroundColor" red="0.024306768551468849" green="0.78262525796890259" blue="0.89413219690322876" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="H1J-Dv-xjh"/>
-                                    <constraint firstAttribute="height" constant="74" id="hq1-HS-h3C"/>
+                                    <constraint firstAttribute="height" constant="50" id="nIK-Ih-ErP"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <state key="normal" title="Волшебная кнопка!">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="But:" destination="cnX-SG-q64" eventType="touchUpInside" id="ZVI-IV-5vB"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Статус" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SYB-jb-sd0">
+                                <rect key="frame" x="7.6666666666666572" y="160" width="400" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="9Ns-5g-er1"/>
+                                    <constraint firstAttribute="width" constant="400" id="YJF-ys-EBR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jsl-LS-o98">
-                                <rect key="frame" x="164" y="87" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GWO-Sk-3oB">
+                                <rect key="frame" x="107.66666666666669" y="230" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="2SU-l2-0v7"/>
+                                    <constraint firstAttribute="width" constant="200" id="Cey-eO-EtJ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="go"/>
                                 <connections>
-                                    <action selector="Button:" destination="cnX-SG-q64" eventType="touchUpInside" id="9Hq-ET-4SC"/>
+                                    <action selector="buttonGo:" destination="cnX-SG-q64" eventType="editingDidEnd" id="8Wc-rf-yvC"/>
                                 </connections>
-                            </button>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jsl-LS-o98" firstAttribute="leading" secondItem="p9w-VX-VaC" secondAttribute="leadingMargin" constant="100" id="DBM-NR-jzb"/>
-                            <constraint firstItem="Ibe-zV-cIs" firstAttribute="leading" secondItem="p9w-VX-VaC" secondAttribute="leadingMargin" constant="50" id="KxW-5l-F7F"/>
-                            <constraint firstItem="Ibe-zV-cIs" firstAttribute="top" secondItem="hOv-gF-30R" secondAttribute="bottom" constant="100" id="vb5-4w-gqq"/>
-                            <constraint firstItem="jsl-LS-o98" firstAttribute="top" secondItem="hOv-gF-30R" secondAttribute="bottom" constant="100" id="wFx-6Z-IXU"/>
+                            <constraint firstItem="GWO-Sk-3oB" firstAttribute="centerX" secondItem="p9w-VX-VaC" secondAttribute="centerX" id="G9L-5s-68p"/>
+                            <constraint firstItem="SYB-jb-sd0" firstAttribute="centerX" secondItem="p9w-VX-VaC" secondAttribute="centerX" id="Gda-xh-Wev"/>
+                            <constraint firstAttribute="trailing" secondItem="YRD-PZ-nwh" secondAttribute="trailing" id="HTp-Dx-ryd"/>
+                            <constraint firstItem="YRD-PZ-nwh" firstAttribute="leading" secondItem="p9w-VX-VaC" secondAttribute="leading" id="IY2-gS-JgZ"/>
+                            <constraint firstItem="GWO-Sk-3oB" firstAttribute="top" secondItem="SYB-jb-sd0" secondAttribute="bottom" constant="20" id="YDF-Ra-Hzm"/>
+                            <constraint firstItem="SYB-jb-sd0" firstAttribute="top" secondItem="YRD-PZ-nwh" secondAttribute="bottom" constant="20" id="om3-gw-8Pk"/>
+                            <constraint firstItem="YRD-PZ-nwh" firstAttribute="top" secondItem="hOv-gF-30R" secondAttribute="bottom" constant="70" id="pz7-J7-MHz"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="ExtendedLabel" destination="Ibe-zV-cIs" id="oiD-wH-oAg"/>
+                        <outlet property="ExtendedLabel" destination="SYB-jb-sd0" id="Tex-ny-FIL"/>
+                        <outlet property="butLabel" destination="YRD-PZ-nwh" id="Jo8-FY-ldb"/>
+                        <outlet property="textField" destination="GWO-Sk-3oB" id="o0r-xp-xeh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rCE-02-TR8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="940" y="392.65367316341832"/>
+            <point key="canvasLocation" x="939.13043478260875" y="392.11956521739131"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bull.JPEG" width="1720" height="1000"/>
+    </resources>
 </document>
